API All Restaurant Data

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -375,7 +375,7 @@ section
 
 }
 
-.our-menu .menu-container .item .item-menu span
+.our-menu .menu-container .item .item-menu .dots
 {
     width : 34%;
     display: inline-block;
